--- a/AcademyCode/AcademyCode/AcademyCode.csproj
+++ b/AcademyCode/AcademyCode/AcademyCode.csproj
@@ -21,4 +21,8 @@
     <ProjectReference Include="..\AcademyCode.BLL\AcademyCode.BLL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\files\Images\" />
+  </ItemGroup>
+
 </Project>
